force-app/main/default/objects/Feedback__c/fields/Client_Custom__c.field-meta.xml
<CustomField>
    <fullName>Client_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Custom</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Feedbacks (Client Custom)</relationshipLabel>
    <relationshipName>Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>