force-app/main/default/objects/Feedback__c/fields/Comments_Custom__c.field-meta.xml
<CustomField>
    <fullName>Comments_Custom__c</fullName>
    <label>Comments Custom</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>