force-app/main/default/objects/Feedback__c/fields/Event_Custom__c.field-meta.xml
<CustomField>
    <fullName>Event_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event  Custom</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Client__c</field>
            <operation>equals</operation>
            <valueField>Event__c.Client__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Feedbacks (Event  Custom)</relationshipLabel>
    <relationshipName>Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>